--- a/inst/reports/level_1_report.Rmd
+++ b/inst/reports/level_1_report.Rmd
@@ -5,7 +5,7 @@ params:
   flowline_sf: ""
   cross_section_sf: ""
   features_sf: ""
-  flowline_points_sf_list: ""
+  flowline_pts_sf_list: ""
   xs_points_sf_list: ""
   dem: ""
   show_xs_map: FALSE
@@ -58,7 +58,7 @@ if(elevation) {
 ## Longitudinal Profile
 ```{r long_profile, echo=FALSE, fig.width=7, fig.height=5, fig.cap="Longitudinal Profile Plot"}
 print(fluvgeo::compare_long_profile(stream = params$stream,
-                            flowline_pts_sf_list = flowline_pts_sf_list,
+                            flowline_pts_sf_list = params$flowline_pts_sf_list,
                             features_sf = params$features_sf,
                             profile_units = params$profile_units))
 ```
