--- a/inst/reports/level_1_report_b.Rmd
+++ b/inst/reports/level_1_report_b.Rmd
@@ -87,7 +87,7 @@ print(fluvgeo::xs_metrics_plot_L1(xs_dims_sf = params$cross_section_sf,
 ## Cross Section Profiles
 ```{r cross_section_plots, echo=FALSE, results='asis',fig.width=7, fig.height=9, warning=FALSE, error=FALSE, message=FALSE}
 # Get dem raster
-dem_rast <- fluvgeo::arc_raster2SpatRaster(raster_path = params$dem)
+dem_rast <- fluvgeo::gdb_raster2SpatRast(raster_path = params$dem)
 
 # Ensure that cross sections are sequentially ordered
 cross_section <- dplyr::arrange(params$cross_section_sf, Seq)
