--- a/README.Rmd
+++ b/README.Rmd
@@ -28,39 +28,45 @@ ArcGIS toolbox](https://github.com/FluvialGeomorph/FluvialGeomorph). The Fluvial
 * Produce reports of stream channel and planform dimensions
 * Tools for choosing a bankfull elevation for ungaged streams
 
-<img src="man/figures/HDQLO-03_h120.jpg" width=125 align="right" />
-
 ## Funding
+
+<img src="man/figures/chl.png" width=125 align="right" />
+
 Funding for development and maintenance of FluvialGeomorph has been provided by the following US Army Corps of Engineers (USACE) programs:
 
-* [Ecosystem Management and Restoration Research Program (EMRRP)](https://emrrp.el.erdc.dren.mil).
+* [Flood and Coastal Risk Management](https://www.erdc.usace.army.mil/Locations/CHL/Flood-Coastal-Risk-Management/)
+* [Ecosystem Management and Restoration Research Program (EMRRP)](https://emrrp.el.erdc.dren.mil)
 * [Regional Sediment Management Program (RSM)](https://rsm.usace.army.mil/)
 * [Mississippi River Geomorphology and Potamology Program (MRG&P)](https://www.mvd.usace.army.mil/Missions/Mississippi-River-Science-Technology/MS-River-Geomorphology-Potamology/)
 * [Flood Risk Management Program (FRM)](https://www.iwr.usace.army.mil/Missions/Flood-Risk-Management/Flood-Risk-Management-Program/)
 * [Engineering With Nature (EWN)](https://ewn.el.erdc.dren.mil/)
 
-<img src="man/figures/EWN_200.png" height=75 align="right" />
-<img src="man/figures/SilverJackets_200.png" height=75 align="right" />
-<img src="man/figures/FRMP_200.png" height=75 align="right" />
-<img src="man/figures/MRG&P_300.png" height=75 align="right" />
-<img src="man/figures/RSM_200.png" height=75 align="right" />
-<img src="man/figures/EMRRP_logo_200.png" height=75 align="right" />
+<p float="left">
+  <img src="man/figures/chl.png" height=75 />
+  <img src="man/figures/EMRRP_logo_200.png" height=75 />
+  <img src="man/figures/RSM_200.png" height=75 />
+  <img src="man/figures/MRG&P_300.png" height=75 />
+  <img src="man/figures/FRMP_200.png" height=75 />
+  <img src="man/figures/SilverJackets_200.png" height=75 />
+  <img src="man/figures/EWN_200.png" height=75 />
+</p>
 
 ## Latest Updates
 Check out the [NEWS](NEWS.md) for details on the latest updates. 
 
 ## Authors
 
+* Christopher Haring, Fluvial Geomorphologist/Research Physical Scientist, U.S. Army Corps of Engineers
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0009-0004-3834-9811" href="https://orcid.org/0009-0004-3834-9811" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon" style="width:1em;margin-right:.5em;"/>https://orcid.org/0009-0004-3834-9811</a></div>
+
 * Michael Dougherty, Geographer, U.S. Army Corps of Engineers
 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-1465-5927" href="https://orcid.org/0000-0002-1465-5927" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-1465-5927</a></div>
--   Christopher Haring, Fluvial Geomorphologist/Research Physical
-    Scientist, U.S. Army Corps of Engineers
-    <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0009-0004-3834-9811" href="https://orcid.org/0009-0004-3834-9811" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD icon" style="width:1em;margin-right:.5em;"/>https://orcid.org/0009-0004-3834-9811</a></div>
+
 * Barrie Chileen Martinez, Geographer, U.S. Army Corps of Engineers
 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-6960-8167" href="https://orcid.org/0000-0002-6960-8167" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-6960-8167</a></div>
 
 ## Install
-To install the `fluvgeo` package, install from GitHub using the `devtools` package:
+To install the `fluvgeo` package, install from GitHub using the `remotes` package:
 
 ```{r install, eval=FALSE}
 remotes::install_github(repo = "FluvialGeomorph/fluvgeo@*release")
